crud de leitor
