# server/app.js
@@ -3,6 +3,7 @@ import categoriaRoute from "./routes/categoriaRoute.js";
 import swaggerUi from "swagger-ui-express";
 import swaggerFile from "./outputSwagger.json" with { type: "json" };
 import autorRoute from "./routes/autorRoute.js";
+import leitorRoute from "./routes/leitorRoute.js";
 const app = express();
 
 app.use(express.json());
@@ -13,4 +14,5 @@ app.use(
 );
 app.use("/categorias",categoriaRoute);
 app.use("/autor",autorRoute);
+app.use("/leitor",leitorRoute);
 export default app;
